kubernetes/talos-flux/apps/kube-system/cilium/config/cilium-host-ingress-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "lock-down-ingress-worker-node"
spec:
  description: "Allow a minimum set of required ports on ingress of worker nodes"
  nodeSelector:
    matchLabels:
      topology.kubernetes.io/zone: public
  ingress:
  - fromEntities:
    - remote-node
    - health
  - toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
      - port: "2379" # etcd
        protocol: TCP
      - port: "4240" # health checks
        protocol: TCP
      - port: "8472" # VXLAN
        protocol: UDP
      - port: "50000"
        protocol: TCP
      - port: "50002"
        protocol: TCP
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
